# generated-api/models/AttemptCreateRequest.ts
@@ -1,0 +1,75 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * csignes-lsf API
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface AttemptCreateRequest
+ */
+export interface AttemptCreateRequest {
+    /**
+     * 
+     * @type {string}
+     * @memberof AttemptCreateRequest
+     */
+    lessonId: string;
+    /**
+     * 
+     * @type {number}
+     * @memberof AttemptCreateRequest
+     */
+    selectedIndex: number;
+}
+
+/**
+ * Check if a given object implements the AttemptCreateRequest interface.
+ */
+export function instanceOfAttemptCreateRequest(value: object): value is AttemptCreateRequest {
+    if (!('lessonId' in value) || value['lessonId'] === undefined) return false;
+    if (!('selectedIndex' in value) || value['selectedIndex'] === undefined) return false;
+    return true;
+}
+
+export function AttemptCreateRequestFromJSON(json: any): AttemptCreateRequest {
+    return AttemptCreateRequestFromJSONTyped(json, false);
+}
+
+export function AttemptCreateRequestFromJSONTyped(json: any, ignoreDiscriminator: boolean): AttemptCreateRequest {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'lessonId': json['lessonId'],
+        'selectedIndex': json['selectedIndex'],
+    };
+}
+
+export function AttemptCreateRequestToJSON(json: any): AttemptCreateRequest {
+    return AttemptCreateRequestToJSONTyped(json, false);
+}
+
+export function AttemptCreateRequestToJSONTyped(value?: AttemptCreateRequest | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'lessonId': value['lessonId'],
+        'selectedIndex': value['selectedIndex'],
+    };
+}
+
