# generated-api/models/AuthGoogleRequest.ts
@@ -1,0 +1,66 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * csignes-lsf API
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface AuthGoogleRequest
+ */
+export interface AuthGoogleRequest {
+    /**
+     * 
+     * @type {string}
+     * @memberof AuthGoogleRequest
+     */
+    idToken: string;
+}
+
+/**
+ * Check if a given object implements the AuthGoogleRequest interface.
+ */
+export function instanceOfAuthGoogleRequest(value: object): value is AuthGoogleRequest {
+    if (!('idToken' in value) || value['idToken'] === undefined) return false;
+    return true;
+}
+
+export function AuthGoogleRequestFromJSON(json: any): AuthGoogleRequest {
+    return AuthGoogleRequestFromJSONTyped(json, false);
+}
+
+export function AuthGoogleRequestFromJSONTyped(json: any, ignoreDiscriminator: boolean): AuthGoogleRequest {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'idToken': json['idToken'],
+    };
+}
+
+export function AuthGoogleRequestToJSON(json: any): AuthGoogleRequest {
+    return AuthGoogleRequestToJSONTyped(json, false);
+}
+
+export function AuthGoogleRequestToJSONTyped(value?: AuthGoogleRequest | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'idToken': value['idToken'],
+    };
+}
+
