# generated-api/models/AuthGoogleResponse.ts
@@ -1,0 +1,66 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * csignes-lsf API
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface AuthGoogleResponse
+ */
+export interface AuthGoogleResponse {
+    /**
+     * 
+     * @type {string}
+     * @memberof AuthGoogleResponse
+     */
+    accessToken: string;
+}
+
+/**
+ * Check if a given object implements the AuthGoogleResponse interface.
+ */
+export function instanceOfAuthGoogleResponse(value: object): value is AuthGoogleResponse {
+    if (!('accessToken' in value) || value['accessToken'] === undefined) return false;
+    return true;
+}
+
+export function AuthGoogleResponseFromJSON(json: any): AuthGoogleResponse {
+    return AuthGoogleResponseFromJSONTyped(json, false);
+}
+
+export function AuthGoogleResponseFromJSONTyped(json: any, ignoreDiscriminator: boolean): AuthGoogleResponse {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'accessToken': json['accessToken'],
+    };
+}
+
+export function AuthGoogleResponseToJSON(json: any): AuthGoogleResponse {
+    return AuthGoogleResponseToJSONTyped(json, false);
+}
+
+export function AuthGoogleResponseToJSONTyped(value?: AuthGoogleResponse | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'accessToken': value['accessToken'],
+    };
+}
+
