# generated-api/models/LessonAttempt.ts
@@ -1,0 +1,102 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * csignes-lsf API
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface LessonAttempt
+ */
+export interface LessonAttempt {
+    /**
+     * 
+     * @type {string}
+     * @memberof LessonAttempt
+     */
+    userId: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof LessonAttempt
+     */
+    lessonId: string;
+    /**
+     * 
+     * @type {number}
+     * @memberof LessonAttempt
+     */
+    selectedIndex: number;
+    /**
+     * 
+     * @type {boolean}
+     * @memberof LessonAttempt
+     */
+    isCorrect: boolean;
+    /**
+     * 
+     * @type {number}
+     * @memberof LessonAttempt
+     */
+    xpAwarded: number;
+}
+
+/**
+ * Check if a given object implements the LessonAttempt interface.
+ */
+export function instanceOfLessonAttempt(value: object): value is LessonAttempt {
+    if (!('userId' in value) || value['userId'] === undefined) return false;
+    if (!('lessonId' in value) || value['lessonId'] === undefined) return false;
+    if (!('selectedIndex' in value) || value['selectedIndex'] === undefined) return false;
+    if (!('isCorrect' in value) || value['isCorrect'] === undefined) return false;
+    if (!('xpAwarded' in value) || value['xpAwarded'] === undefined) return false;
+    return true;
+}
+
+export function LessonAttemptFromJSON(json: any): LessonAttempt {
+    return LessonAttemptFromJSONTyped(json, false);
+}
+
+export function LessonAttemptFromJSONTyped(json: any, ignoreDiscriminator: boolean): LessonAttempt {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'userId': json['userId'],
+        'lessonId': json['lessonId'],
+        'selectedIndex': json['selectedIndex'],
+        'isCorrect': json['isCorrect'],
+        'xpAwarded': json['xpAwarded'],
+    };
+}
+
+export function LessonAttemptToJSON(json: any): LessonAttempt {
+    return LessonAttemptToJSONTyped(json, false);
+}
+
+export function LessonAttemptToJSONTyped(value?: LessonAttempt | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'userId': value['userId'],
+        'lessonId': value['lessonId'],
+        'selectedIndex': value['selectedIndex'],
+        'isCorrect': value['isCorrect'],
+        'xpAwarded': value['xpAwarded'],
+    };
+}
+
