# generated-api/models/LessonStepQCM.ts
@@ -1,0 +1,103 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * csignes-lsf API
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface LessonStepQCM
+ */
+export interface LessonStepQCM {
+    /**
+     * 
+     * @type {string}
+     * @memberof LessonStepQCM
+     */
+    type: LessonStepQCMTypeEnum;
+    /**
+     * 
+     * @type {string}
+     * @memberof LessonStepQCM
+     */
+    question: string;
+    /**
+     * 
+     * @type {Array<string>}
+     * @memberof LessonStepQCM
+     */
+    choices: Array<string>;
+    /**
+     * 
+     * @type {number}
+     * @memberof LessonStepQCM
+     */
+    correctIndex: number;
+}
+
+
+/**
+ * @export
+ */
+export const LessonStepQCMTypeEnum = {
+    Qcm: 'qcm'
+} as const;
+export type LessonStepQCMTypeEnum = typeof LessonStepQCMTypeEnum[keyof typeof LessonStepQCMTypeEnum];
+
+
+/**
+ * Check if a given object implements the LessonStepQCM interface.
+ */
+export function instanceOfLessonStepQCM(value: object): value is LessonStepQCM {
+    if (!('type' in value) || value['type'] === undefined) return false;
+    if (!('question' in value) || value['question'] === undefined) return false;
+    if (!('choices' in value) || value['choices'] === undefined) return false;
+    if (!('correctIndex' in value) || value['correctIndex'] === undefined) return false;
+    return true;
+}
+
+export function LessonStepQCMFromJSON(json: any): LessonStepQCM {
+    return LessonStepQCMFromJSONTyped(json, false);
+}
+
+export function LessonStepQCMFromJSONTyped(json: any, ignoreDiscriminator: boolean): LessonStepQCM {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'type': json['type'],
+        'question': json['question'],
+        'choices': json['choices'],
+        'correctIndex': json['correctIndex'],
+    };
+}
+
+export function LessonStepQCMToJSON(json: any): LessonStepQCM {
+    return LessonStepQCMToJSONTyped(json, false);
+}
+
+export function LessonStepQCMToJSONTyped(value?: LessonStepQCM | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'type': value['type'],
+        'question': value['question'],
+        'choices': value['choices'],
+        'correctIndex': value['correctIndex'],
+    };
+}
+
