# generated-api/models/LessonStepVideo.ts
@@ -1,0 +1,85 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * csignes-lsf API
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface LessonStepVideo
+ */
+export interface LessonStepVideo {
+    /**
+     * 
+     * @type {string}
+     * @memberof LessonStepVideo
+     */
+    type: LessonStepVideoTypeEnum;
+    /**
+     * 
+     * @type {string}
+     * @memberof LessonStepVideo
+     */
+    videoUrl: string;
+}
+
+
+/**
+ * @export
+ */
+export const LessonStepVideoTypeEnum = {
+    Video: 'video'
+} as const;
+export type LessonStepVideoTypeEnum = typeof LessonStepVideoTypeEnum[keyof typeof LessonStepVideoTypeEnum];
+
+
+/**
+ * Check if a given object implements the LessonStepVideo interface.
+ */
+export function instanceOfLessonStepVideo(value: object): value is LessonStepVideo {
+    if (!('type' in value) || value['type'] === undefined) return false;
+    if (!('videoUrl' in value) || value['videoUrl'] === undefined) return false;
+    return true;
+}
+
+export function LessonStepVideoFromJSON(json: any): LessonStepVideo {
+    return LessonStepVideoFromJSONTyped(json, false);
+}
+
+export function LessonStepVideoFromJSONTyped(json: any, ignoreDiscriminator: boolean): LessonStepVideo {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'type': json['type'],
+        'videoUrl': json['videoUrl'],
+    };
+}
+
+export function LessonStepVideoToJSON(json: any): LessonStepVideo {
+    return LessonStepVideoToJSONTyped(json, false);
+}
+
+export function LessonStepVideoToJSONTyped(value?: LessonStepVideo | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'type': value['type'],
+        'videoUrl': value['videoUrl'],
+    };
+}
+
