# generated-api/models/LessonStepsInner.ts
@@ -1,0 +1,76 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * csignes-lsf API
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import type { LessonStepQCM } from './LessonStepQCM';
+import {
+    instanceOfLessonStepQCM,
+    LessonStepQCMFromJSON,
+    LessonStepQCMFromJSONTyped,
+    LessonStepQCMToJSON,
+} from './LessonStepQCM';
+import type { LessonStepVideo } from './LessonStepVideo';
+import {
+    instanceOfLessonStepVideo,
+    LessonStepVideoFromJSON,
+    LessonStepVideoFromJSONTyped,
+    LessonStepVideoToJSON,
+} from './LessonStepVideo';
+
+/**
+ * @type LessonStepsInner
+ * 
+ * @export
+ */
+export type LessonStepsInner = LessonStepQCM | LessonStepVideo;
+
+export function LessonStepsInnerFromJSON(json: any): LessonStepsInner {
+    return LessonStepsInnerFromJSONTyped(json, false);
+}
+
+export function LessonStepsInnerFromJSONTyped(json: any, ignoreDiscriminator: boolean): LessonStepsInner {
+    if (json == null) {
+        return json;
+    }
+    if (typeof json !== 'object') {
+        return json;
+    }
+    if (instanceOfLessonStepQCM(json)) {
+        return LessonStepQCMFromJSONTyped(json, true);
+    }
+    if (instanceOfLessonStepVideo(json)) {
+        return LessonStepVideoFromJSONTyped(json, true);
+    }
+    return {} as any;
+}
+
+export function LessonStepsInnerToJSON(json: any): any {
+    return LessonStepsInnerToJSONTyped(json, false);
+}
+
+export function LessonStepsInnerToJSONTyped(value?: LessonStepsInner | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+    if (typeof value !== 'object') {
+        return value;
+    }
+    if (instanceOfLessonStepQCM(value)) {
+        return LessonStepQCMToJSON(value as LessonStepQCM);
+    }
+    if (instanceOfLessonStepVideo(value)) {
+        return LessonStepVideoToJSON(value as LessonStepVideo);
+    }
+    return {};
+}
+
