# generated-api/models/Progress.ts
@@ -1,0 +1,124 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * csignes-lsf API
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface Progress
+ */
+export interface Progress {
+    /**
+     * 
+     * @type {string}
+     * @memberof Progress
+     */
+    userId: string;
+    /**
+     * 
+     * @type {number}
+     * @memberof Progress
+     */
+    xp: number;
+    /**
+     * 
+     * @type {Array<string>}
+     * @memberof Progress
+     */
+    completedLessons: Array<string>;
+    /**
+     * 
+     * @type {string}
+     * @memberof Progress
+     */
+    lastLessonId?: string | null;
+    /**
+     * 
+     * @type {number}
+     * @memberof Progress
+     */
+    lastUserAnswer?: number | null;
+    /**
+     * 
+     * @type {boolean}
+     * @memberof Progress
+     */
+    lastWasCorrect?: boolean | null;
+    /**
+     * 
+     * @type {number}
+     * @memberof Progress
+     */
+    lastXpEarned?: number | null;
+    /**
+     * 
+     * @type {Date}
+     * @memberof Progress
+     */
+    updatedAt?: Date | null;
+}
+
+/**
+ * Check if a given object implements the Progress interface.
+ */
+export function instanceOfProgress(value: object): value is Progress {
+    if (!('userId' in value) || value['userId'] === undefined) return false;
+    if (!('xp' in value) || value['xp'] === undefined) return false;
+    if (!('completedLessons' in value) || value['completedLessons'] === undefined) return false;
+    return true;
+}
+
+export function ProgressFromJSON(json: any): Progress {
+    return ProgressFromJSONTyped(json, false);
+}
+
+export function ProgressFromJSONTyped(json: any, ignoreDiscriminator: boolean): Progress {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'userId': json['userId'],
+        'xp': json['xp'],
+        'completedLessons': json['completedLessons'],
+        'lastLessonId': json['lastLessonId'] == null ? undefined : json['lastLessonId'],
+        'lastUserAnswer': json['lastUserAnswer'] == null ? undefined : json['lastUserAnswer'],
+        'lastWasCorrect': json['lastWasCorrect'] == null ? undefined : json['lastWasCorrect'],
+        'lastXpEarned': json['lastXpEarned'] == null ? undefined : json['lastXpEarned'],
+        'updatedAt': json['updatedAt'] == null ? undefined : (new Date(json['updatedAt'])),
+    };
+}
+
+export function ProgressToJSON(json: any): Progress {
+    return ProgressToJSONTyped(json, false);
+}
+
+export function ProgressToJSONTyped(value?: Progress | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'userId': value['userId'],
+        'xp': value['xp'],
+        'completedLessons': value['completedLessons'],
+        'lastLessonId': value['lastLessonId'],
+        'lastUserAnswer': value['lastUserAnswer'],
+        'lastWasCorrect': value['lastWasCorrect'],
+        'lastXpEarned': value['lastXpEarned'],
+        'updatedAt': value['updatedAt'] == null ? value['updatedAt'] : value['updatedAt'].toISOString(),
+    };
+}
+
